# DEDSPortfolio

./: .gitignore  pyproject.toml  requirements.txt
Notebooks/: DEDSVoorbeeldje.ipynb  DEDS_WC_1.2_en_1.3_Opdrachten.ipynb  DEDS_WC_10.1_Opdrachten copy.ipynb  DEDS_WC_10.1_Opdrachten.ipynb  DEDS_WC_9.1_Opdrachten.ipynb  DEDS_WC_9.2_Opdrachten.ipynb  KaggleOpdracht.ipynb  KaggleOpdracht2.ipynb  KaggleOpdrachtBanaan.ipynb
ReinforcementLearning_MazeGame/: main.py
Week1/: DEDS_WC_1.1a_Opdrachten.ipynb  DEDS_WC_1.1b_Opdrachten.ipynb  DEDS_WC_1.2_en_1.3_Opdrachten.ipynb  Script.ipynb
notebooks/: DEDS_WC_1.1a_Opdrachten.ipynb  DEDS_WC_1.1b_Opdrachten.ipynb  DEDS_WC_1.2_en_1.3_Opdrachten.ipynb  DEDS_WC_10.1_Opdrachten.ipynb  DEDS_WC_9.1_Opdrachten.ipynb  DEDS_WC_9.2_Opdrachten.ipynb  DEDS_Week17&18_DenA.ipynb  DEDS_Week17&18_DenA_Les2.ipynb  KaggleOpdracht_ Mark Wilbrink.ipynb
src/: DEDS_WC_1.1a.py  DEDS_WC_1.1b.py  DEDS_WC_1.2_en_1.3.py  crate_db.py  create_database.sql  game.py  message.ipynb  student_regression_project.py
src/Week1/: DEDS_WC_1.1a_Opdrachten.ipynb
