[project]
name = "DEDS_Portfolio"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mark Wilbrink", email = "23050063@student.hhs.nl"},
]
dependencies = ["pandas>=2.2.3", "ipykernel>=6.29.5"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
